syntax = "proto3";

package inventory;

option go_package = "github.com/SabinGhost19/go-micro-payment/proto/inventorypb";

// Inventory service to handle stock/quantity for products
service InventoryService {
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse) {}
  rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse) {}
  rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse) {}
}

// Check stock for a product
message CheckStockRequest {
  string product_id = 1;
}

// Reserve stock for an order
message ReserveStockRequest {
  string order_id = 1;
  repeated StockItem items = 2;
}

// Update stock for a product
message UpdateStockRequest {
  string product_id = 1;
  int32 stock_delta = 2; // positive or negative delta
}

// Used for order reservation
message StockItem {
  string product_id = 1;
  int32 quantity = 2;
}

// Stock check response
message CheckStockResponse {
  string product_id = 1;
  int32 available = 2;
}

// Stock reservation response
message ReserveStockResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
}

// Stock update response
message UpdateStockResponse {
  string product_id = 1;
  int32 new_stock = 2;
}
